# django_section

./: .template.env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
dbsection/: manage.py
dbsection/config/: settings.py  urls.py
dbsection/dbsection/: asgi.py  settings.py  urls.py  wsgi.py
dbsection/users/: models.py
dbsection/users/management/commands/: generate_users.py
dbsection/users/migrations/: 0001_initial.py
dbsection/users/rest/: serializers.py
dbsection/videos/: admin.py  apps.py  containers.py  models.py
dbsection/videos/management/commands/: generate_videos.py
dbsection/videos/migrations/: 0001_initial.py
dbsection/videos/repositories/: likes.py  videos.py
dbsection/videos/rest/: serializers.py  urls.py  views.py
dbsection/videos/services/: likes.py  videos.py
